corpus/c/thread_safety/case-01/snapshots/gcc15/dual_sink_structured/render.default.txt
error: [thread_safety] operand type ‘struct Blob *’ is incompatible with argument 1 of ‘__atomic_store_n’
raw : operand type ‘struct Blob *’ is incompatible with argument 1 of ‘__atomic_store_n’ @ src/main.c:7:5
| src/main.c:7:5
|     __atomic_store_n(&blob, blob, __ATOMIC_SEQ_CST);
|     ^